--- a/face-verification-app/backend/render.yaml
+++ b/face-verification-app/backend/render.yaml
@@ -2,7 +2,13 @@ services:
   - type: web
     name: fastapi-backend
     env: python
+    plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
-    plan: free
-    envVars: [] 
+    envVars:
+      - key: PORT
+        value: 10000
+
+build:
+  environment:
+    pythonVersion: 3.10
