--- a/face-verification-app/backend/requirements.txt
+++ b/face-verification-app/backend/requirements.txt
@@ -1,5 +1,7 @@
-fastapi
-uvicorn
-facenet-pytorch
-torch
-Pillow 
+fastapi==0.110.1
+uvicorn==0.29.0
+facenet-pytorch==2.6.0
+torch==2.2.2
+torchvision==0.17.2
+pillow==10.2.0
+python-multipart
